--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "scripts": {
     "clean": "rm -rf build",
     "build:wasm": "docker build -f secp256k1.Dockerfile . -t wasm-secp256k1 && docker run -it -v $(pwd)/public:/out wasm-secp256k1",
-    "gen": "bun run ./src/gen.ts > ./src/gen/wasm.ts"
+    "gen": "bun run ./src/generate.ts public/secp256k1.js > ./src/gen/wasm.ts",
+    "build": "yarn build:wasm && yarn gen && tsc",
+    "demo": "yarn build && vite dev"
   },
   "dependencies": {},
   "devDependencies": {
