--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf build",
-    "build:wasm": "docker build -f secp256k1.Dockerfile . -t wasm-secp256k1 && docker run -it -v $(pwd)/public:/out wasm-secp256k1",
-    "gen": "bun run ./src/generate.ts public/secp256k1.js > ./src/gen/wasm.ts",
-    "build": "yarn build:wasm && yarn gen && tsc",
-    "demo": "yarn build && vite dev"
+    "build:wasm-bin": "docker build -f secp256k1.Dockerfile . -t wasm-secp256k1 && docker run -it -v $(pwd)/public:/out wasm-secp256k1",
+    "build:wasm-ts": "bun run ./src/generate.ts public/secp256k1.js > ./src/gen/wasm.ts",
+    "build:wasm": "bun run build:wasm-bin && bun run build:wasm-ts",
+    "build": "bun run build:wasm && tsc",
+    "demo": "bun run build && vite dev"
   },
   "dependencies": {},
   "devDependencies": {
