--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@solar-republic/wasm-secp256k1",
   "description": "TypeScript wrapper and Web Assembly module of the libsecp256k1 C library",
-  "version": "0.0.4",
+  "version": "0.0.4-alpha.0",
   "type": "module",
   "main": "build/dist/main.js",
   "files": [
