feat: gen_sk, compiler opts, ignore out

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,6 +33,5 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          prerelease: true
           files: |
-            public/secp256k1.wasm
+            public/out/secp256k1.wasm
