--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "clean": "rm -rf build",
     "build:wasm-bin": "docker build -f secp256k1.Dockerfile . -t wasm-secp256k1 && docker run --rm -v $(pwd)/public:/out wasm-secp256k1",
-    "build:wasm-ts": "bun run ./src/generate.ts public/secp256k1.js > ./src/gen/wasm.ts",
+    "build:wasm-ts": "bun run ./src/generate.ts public/out/secp256k1.js > ./src/gen/wasm.ts",
     "build:wasm": "bun run build:wasm-bin && bun run build:wasm-ts",
     "build": "bun run build:wasm && tsc",
     "demo": "bun run build && vite dev"
@@ -22,6 +22,7 @@
     "@blake.regalia/belt": "^0.21.0",
     "@blake.regalia/eslint-config-elite": "^0.3.3",
     "@blake.regalia/tsconfig": "^0.1.2",
+    "@solar-republic/neutrino": "^0.10.0",
     "@types/node": "^20.8.9",
     "@types/web": "^0.0.119",
     "@typescript-eslint/parser": "^6.9.0",
