--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
