--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "dist/",
     "public/"
   ],
+  "exports": {
+    ".": "./dist/main.js",
+    "./headless": "./dist/headless.js",
+    "./gzipped": "./dist/gzipped.js"
+  },
   "author": "Blake Regalia <blake.regalia@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -16,7 +21,7 @@
     "build:wasm-ts": "bun run ./src/generate.ts public/out/secp256k1.js > ./src/gen/wasm.ts",
     "build:wasm": "bun run build:wasm-bin && bun run build:wasm-ts",
     "build:demo": "vite build && rm docs/out/secp256k1.js",
-    "build:ts": "tsc && bun run build:demo",
+    "build:ts": "rollup -c rollup.config.ts --configPlugin typescript && bun run build:demo",
     "build": "bun run build:wasm && bun run build:ts",
     "demo": "bun run build && vite dev"
   },
@@ -25,12 +30,16 @@
     "@blake.regalia/belt": "^0.21.0",
     "@blake.regalia/eslint-config-elite": "^0.3.3",
     "@blake.regalia/tsconfig": "^0.1.2",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "@rollup/plugin-wasm": "^6.2.2",
+    "@rollup/pluginutils": "^5.0.5",
     "@types/node": "^20.8.10",
     "@types/web": "^0.0.119",
     "@typescript-eslint/parser": "^6.9.1",
     "acorn": "^8.11.2",
     "eslint": "^8.52.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "rollup": "^4.2.0",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
   },
