--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "demo": "bun run build && vite dev"
   },
   "dependencies": {
-    "@blake.regalia/belt": "^0.37.0"
+    "@blake.regalia/belt": "^0.40.0"
   },
   "devDependencies": {
     "@blake.regalia/eslint-config-elite": "^0.4.4",
@@ -34,17 +34,18 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@rollup/plugin-wasm": "^6.2.2",
     "@rollup/pluginutils": "^5.1.0",
-    "@types/node": "^20.14.7",
-    "@types/web": "^0.0.149",
+    "@types/node": "^22.7.9",
+    "@types/web": "^0.0.174",
     "@typescript-eslint/parser": "^7.13.1",
-    "acorn": "^8.12.0",
+    "acorn": "^8.13.0",
     "eslint": "^8.57.0",
     "eslint-plugin-unused-imports": "^3.2.0",
-    "rollup": "^4.18.0",
-    "typescript": "^5.5.2",
-    "vite": "^5.3.1"
+    "rollup": "^4.24.0",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10"
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "packageManager": "pnpm@9.0.6+sha1.648f6014eb363abb36618f2ba59282a9eeb3e879"
 }
