--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf build",
-    "build:wasm-bin": "docker build -f secp256k1.Dockerfile . -t wasm-secp256k1 && docker run --rm -v $(pwd)/public:/out wasm-secp256k1",
+    "build:wasm-bin": "docker build -f secp256k1.Dockerfile . -t wasm-secp256k1 --progress=plain && docker run --rm -v $(pwd)/public:/out wasm-secp256k1",
     "build:wasm-ts": "bun run ./src/generate.ts public/out/secp256k1.js > ./src/gen/wasm.ts",
     "build:wasm": "bun run build:wasm-bin && bun run build:wasm-ts",
     "build:demo": "vite build && rm docs/out/secp256k1.js",
