--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,15 +23,5 @@ jobs:
       - name: Setup bun
         uses: oven-sh/setup-bun@v1
       
-      - name: Install deps
-        run: bun install
-
       - name: Build
-        run: bun run build
-
-      - name: Upload
-        uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            public/out/secp256k1.wasm
+        run: make build
