--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "submodules/libsecp256k1"]
-	path = submodules/libsecp256k1
+[submodule "libsecp256k1/secp256k1"]
+	path = libsecp256k1/secp256k1
 	url = https://github.com/bitcoin-core/secp256k1
