--- a/package.json
+++ b/package.json
@@ -1,51 +1,36 @@
 {
-  "name": "@solar-republic/wasm-secp256k1",
-  "description": "TypeScript wrapper and Web Assembly module of the libsecp256k1 C library",
-  "version": "0.5.0",
-  "type": "module",
-  "main": "dist/main.js",
-  "files": [
-    "dist/",
-    "public/"
-  ],
-  "exports": {
-    ".": "./dist/main.js",
-    "./gzipped": "./dist/gzipped.js",
-    "./headless": "./dist/headless.js"
-  },
-  "author": "Blake Regalia <blake.regalia@gmail.com>",
+  "name": "@labscommunity/wasm-secp256k1",
+  "version": "0.0.1",
+  "description": "Minimal wrapper around libsecp256k1 library (https://github.com/bitcoin-core/secp256k1).",
   "license": "MIT",
-  "scripts": {
-    "clean": "rm -rf build",
-    "build:wasm-bin": "docker build -f secp256k1.Dockerfile . -t wasm-secp256k1 --progress=plain && docker run --rm -v $(pwd)/public:/out wasm-secp256k1",
-    "build:wasm-ts": "bun run ./src/generate.ts public/out/secp256k1.js > ./src/gen/wasm.ts",
-    "build:wasm": "pnpm run build:wasm-bin && pnpm run build:wasm-ts",
-    "build:demo": "vite build && rm docs/out/secp256k1.js",
-    "build:ts": "rollup -c rollup.config.ts --configPlugin typescript && pnpm run build:demo",
-    "build": "pnpm run build:wasm && pnpm run build:ts && cp public/out/secp256k1.wasm dist/",
-    "demo": "pnpm run build && vite dev"
-  },
-  "dependencies": {
-    "@blake.regalia/belt": "^0.52.2"
+  "main": "dist/main.cjs",
+  "files": ["dist/"],
+  "type": "commonjs",
+  "types": "./dist/main.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/main.cjs",
+      "import": "./dist/main.esm.js"
+    }
   },
   "devDependencies": {
-    "@blake.regalia/eslint-config-elite": "^0.5.11",
-    "@blake.regalia/tsconfig": "^0.2.0",
     "@rollup/plugin-typescript": "^12.1.2",
     "@rollup/plugin-wasm": "^6.2.2",
     "@rollup/pluginutils": "^5.1.4",
+    "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.10.5",
     "@types/web": "^0.0.188",
     "@typescript-eslint/parser": "^8.19.0",
-    "acorn": "^8.14.0",
     "eslint": "^9.17.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "rollup": "^4.29.1",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.7"
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.2"
   },
   "publishConfig": {
     "access": "public"
   },
-  "packageManager": "pnpm@9.0.6+sha1.648f6014eb363abb36618f2ba59282a9eeb3e879"
+  "scripts": {
+    "build": "bunx rollup -c rollup.config.ts --configPlugin typescript"
+  }
 }
