--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,17 +1,14 @@
 name: Release
 
 on:
-  push:
-    branches:
-      - main
-    tags:
-      - v*
+  workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: read
+  packages: write
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,9 +16,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
-      
+
       - name: Setup bun
         uses: oven-sh/setup-bun@v1
-      
+
+      - name: Clean
+        run: make clean
+
       - name: Build
         run: make build
+
+      - name: Publish
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: make publish
