chore(package): use npmjs instead of github

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@arweaveteam/wasm-secp256k1",
+  "name": "@arweave/wasm-secp256k1",
   "version": "0.0.3",
   "description": "Minimal wrapper around libsecp256k1 library (https://github.com/bitcoin-core/secp256k1).",
   "license": "MIT",
   "main": "dist/main.cjs",
-  "files": ["dist/"],
+  "files": [ "dist/" ],
   "type": "commonjs",
   "types": "./dist/main.d.ts",
   "exports": {
@@ -28,12 +28,11 @@
     "typescript": "^5.7.2"
   },
   "publishConfig": {
-    "access": "public",
-    "registry": "https://npm.pkg.github.com"
+    "access": "public"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ArweaveTeam/wasm-secp256k1.git"
+    "url": "git+https://github.com/ArweaveTeam/wasm-secp256k1.git"
   },
   "scripts": {
     "build": "bunx rollup -c rollup.config.ts --configPlugin typescript"
