--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@arweave/wasm-secp256k1",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Minimal wrapper around libsecp256k1 library (https://github.com/bitcoin-core/secp256k1).",
   "license": "MIT",
   "main": "dist/main.cjs",
-  "files": [ "dist/" ],
+  "files": [
+    "dist/"
+  ],
   "type": "commonjs",
   "types": "./dist/main.d.ts",
   "exports": {
