--- a/package.json
+++ b/package.json
@@ -25,24 +25,23 @@
     "build": "pnpm run build:wasm && pnpm run build:ts && cp public/out/secp256k1.wasm dist/",
     "demo": "pnpm run build && vite dev"
   },
-  "dependencies": {
-    "@blake.regalia/belt": "^0.52.2"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@blake.regalia/eslint-config-elite": "^0.5.11",
-    "@blake.regalia/tsconfig": "^0.2.0",
+    "@blake.regalia/belt": "^0.57.1",
+    "@blake.regalia/eslint-config-elite": "^0.5.22",
+    "@blake.regalia/tsconfig": "^0.3.7",
     "@rollup/plugin-typescript": "^12.1.2",
     "@rollup/plugin-wasm": "^6.2.2",
     "@rollup/pluginutils": "^5.1.4",
-    "@types/node": "^22.10.5",
-    "@types/web": "^0.0.188",
-    "@typescript-eslint/parser": "^8.19.0",
+    "@types/node": "^22.13.5",
+    "@types/web": "^0.0.205",
+    "@typescript-eslint/parser": "^8.24.1",
     "acorn": "^8.14.0",
-    "eslint": "^9.17.0",
+    "eslint": "^9.21.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "rollup": "^4.29.1",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.7"
+    "rollup": "^4.34.8",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.1"
   },
   "publishConfig": {
     "access": "public"
